--- a/public/templates/header.twig
+++ b/public/templates/header.twig
@@ -19,17 +19,23 @@
 }
 </style>
 
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="/">
-      Fungi Prime
-    </a>
-    <div class="collapse navbar-collapse">
+    <a class="navbar-brand" href="/">Base de Datos de Hongos</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="/index">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="/fungi_list">Listado</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about">Acerca de</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact">Contacto</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">Acerca de</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact">Contacto</a>
+        </li>
       </ul>
     </div>
   </div>
