--- a/public/templates/view_toggle.twig
+++ b/public/templates/view_toggle.twig
@@ -4,6 +4,9 @@
     <button type="button" class="btn btn-secondary active" id="grid-view">
       <i class="fas fa-th"></i> Cuadrícula
     </button>
+    <button type="button" class="btn btn-secondary" id="cards-view">
+      <i class="fas fa-id-card"></i> Tarjetas
+    </button>
     <button type="button" class="btn btn-secondary" id="list-view">
       <i class="fas fa-list"></i> Lista
     </button>
