--- a/public/templates/fungi_list.twig
+++ b/public/templates/fungi_list.twig
@@ -120,7 +120,11 @@
           <div class="fungi-card card">
             <img src="{{ fungi.image_urls|split(',')[0] }}" class="card-img-top" alt="{{ fungi.name }}">
             <div class="card-body">
-              <h5 class="card-title">{{ fungi.name }}</h5>
+              <h5 class="card-title">
+                <a href="/fungus?id={{ fungi.id }}" class="text-decoration-none">
+                  {{ fungi.name|replace({'-': ' '})|title }}
+                </a>
+              </h5>
               <p class="card-text">{{ fungi.description }}</p>
             </div>
           </div>
@@ -161,9 +165,12 @@
                 <div class="fungi-card card">
                   ${fungus.image_urls ? `<img src="${fungus.image_urls.split(',')[0]}" class="card-img-top" alt="${fungus.name}">` : ''}
                   <div class="card-body">
-                    <h5 class="card-title">${fungus.name}</h5>
+                    <h5 class="card-title">
+                      <a href="/fungus?id=${fungus.id}" class="text-decoration-none">
+                        ${fungus.name.replace(/-/g, ' ').replace(/\b\w/g, l => l.toUpperCase())}
+                      </a>
+                    </h5>
                     <p class="card-text">Autor: ${fungus.author}</p>
-                    <a href="/fungus?id=${fungus.id}" class="btn btn-primary">Ver detalles</a>
                   </div>
                 </div>
               `;
