Añadido sistema de likes y vistas para hongos, aun no puse boton de like pero bueno

--- a/public/templates/fungus_detail.twig
+++ b/public/templates/fungus_detail.twig
@@ -95,6 +95,10 @@
     <div class="fungi-card">
       <h2 class="card-title">{{ fungus.name }}</h2>
       
+      <div>
+      <p>Likes: {{ fungus.likes }}</p>
+<p>Views: {{ fungus.views }}</p>
+      </div>
       <div class="detail-item">
         <strong>Autor:</strong> {{ fungus.author }}
       </div>
