--- a/public/templates/header.twig
+++ b/public/templates/header.twig
@@ -15,7 +15,28 @@
 }
 
 .nav-link {
+  color: #fff !important;
+}
+
+.dropdown-menu {
+  background: rgba(0, 0, 0, 0.9);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.dropdown-item {
   color: #fff;
+}
+
+.dropdown-item:hover {
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+}
+
+.user-avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 </style>
 
@@ -36,6 +57,24 @@
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contacto</a>
         </li>
+        {% if is_logged_in %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="{{ user.avatar|default('/assets/img/default-avatar.png') }}" alt="Avatar" class="user-avatar">
+              {{ user.username }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+              <a class="dropdown-item" href="/perfil"><i class="fas fa-user mr-2"></i>Mi Perfil</a>
+              <a class="dropdown-item" href="/configuracion"><i class="fas fa-cog mr-2"></i>Configuración</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt mr-2"></i>Cerrar Sesión</a>
+            </div>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Iniciar Sesión</a>
+          </li>
+        {% endif %}
       </ul>
     </div>
   </div>
