--- a/public/templates/random_fungi.twig
+++ b/public/templates/random_fungi.twig
@@ -257,6 +257,19 @@
               <button class="btn btn-custom btn-share">
                 <i class="fas fa-share-alt mr-2"></i>Compartir
               </button>
+              {% if session.isLoggedIn %}
+                <form action="/fungus/like" method="POST" class="d-inline">
+                  <input type="hidden" name="fungi_id" value="{{ fungus.id }}">
+                  <button type="submit" class="btn btn-custom {% if fungus.is_liked %}btn-danger{% else %}btn-primary{% endif %}">
+                    <i class="fas fa-heart mr-2"></i>
+                    {% if fungus.is_liked %}
+                      Quitar Me gusta
+                    {% else %}
+                      Me gusta
+                    {% endif %}
+                  </button>
+                </form>
+              {% endif %}
             </div>
           </div>
         </div>
