fix: solución integral de problemas en múltiples componentes - Corrige inicialización de sesiones en SessionController - Mejora manejo de JWT y cookies seguras - Optimiza carga de variables de entorno en AppInitializer - Refactoriza estructura de rutas para mejor mantenibilidad - Implementa validaciones en DatabaseController - Fortalece seguridad en AuthController - Actualiza plantillas para mejor manejo de errores

--- a/public/templates/fungi/fungus_detail.twig
+++ b/public/templates/fungi/fungus_detail.twig
@@ -89,7 +89,7 @@
   </style>
 </head>
 <body>
-  {% include 'header.twig' %}
+  {% include 'components/header.twig' %}
 
   <div class="container main-container">
     <div class="fungi-card">
