trying to solve routes and style

--- a/public/templates/auth/register.twig
+++ b/public/templates/auth/register.twig
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/register.css">
+  <link rel="stylesheet" href="/assets/styles/register.css">
 </head>
 <body>
   <div class="register-container">
