--- a/public/templates/errors/404.twig
+++ b/public/templates/errors/404.twig
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="/assets/css/404.css"> -->
+  <link rel="stylesheet" href="/assets/styles/404.css">
 </head>
 <body>
   <div id="particles-container"></div>
